WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72514
CSSValue: isInheritedValue() doesn't need a dedicated bit.
https://bugs.webkit.org/show_bug.cgi?id=72514
Summary
CSSValue: isInheritedValue() doesn't need a dedicated bit.
Andreas Kling
Reported
2011-11-16 09:22:58 PST
Returning (m_classType == InheritedClass) would do the job just as well.
Attachments
Patch
(2.69 KB, patch)
2011-11-16 09:25 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-11-16 09:25:40 PST
Created
attachment 115392
[details]
Patch
Antti Koivisto
Comment 2
2011-11-16 09:42:49 PST
Comment on
attachment 115392
[details]
Patch r=me
WebKit Review Bot
Comment 3
2011-11-16 11:42:30 PST
Comment on
attachment 115392
[details]
Patch Clearing flags on attachment: 115392 Committed
r100481
: <
http://trac.webkit.org/changeset/100481
>
WebKit Review Bot
Comment 4
2011-11-16 11:42:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug