CSSValue: isInheritedValue() doesn't need a dedicated bit. <http://webkit.org/b/72514>

Patch by Andreas Kling <kling@webkit.org> on 2011-11-16
Reviewed by Antti Koivisto.

Remove CSSValue::m_isInherited and have isInheritedValue() check the
class type instead. There's no compelling reason for CSSInheritedValue
to have a dedicated bit, since nobody subclasses it anyway.

* css/CSSValue.h:
(WebCore::CSSValue::isInheritedValue):
(WebCore::CSSValue::CSSValue):

Canonical link: https://commits.webkit.org/89009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100481 268f45cc-cd09-0410-ab3c-d52691b4dbfc